frontend/test/should_fail/index_exec_loop_node_fromIndexMultipleFromTo_index_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	for{n:Node in nodesFromIndexMultipleFromTo(j, j, j + 1, fooi, 0, 42); true }
}